@@ -38,6 +38,12 @@
 <p>2019-02-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawDashPolygon): (DrawDashPolygon): Don't read
+beyond end of dash pattern array.  This is a second instance of
+issue identified by SourceForge issue #591.  Fixes oss-fuzz 13160
+&quot;graphicsmagick/coder_MVG_fuzzer: Heap-buffer-overflow in
+DrawDashPolygon&quot;.  The earlier attempt to fix this problem today
+broke dash patterns entirely.  (Credit to OSS-Fuzz)</li>
 <li>magick/annotate.c (RenderFreetype): Eliminate memory leak of
 GlyphInfo.image (type FT_Glyph) while rendering some FreeType
 fonts such as the one we use now in the Magick++ test suite.</li>
