@@ -1,5 +1,12 @@
 2019-02-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/render.c (DrawDashPolygon): (DrawDashPolygon): Don't read
+	beyond end of dash pattern array.  This is a second instance of
+	issue identified by SourceForge issue #591.  Fixes oss-fuzz 13160
+	"graphicsmagick/coder_MVG_fuzzer: Heap-buffer-overflow in
+	DrawDashPolygon".  The earlier attempt to fix this problem today
+	broke dash patterns entirely.  (Credit to OSS-Fuzz)
+
 	* magick/annotate.c (RenderFreetype): Eliminate memory leak of
 	GlyphInfo.image (type FT_Glyph) while rendering some FreeType
 	fonts such as the one we use now in the Magick++ test suite.
